--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <!--문단 <p>를 쓰면 두줄로 text를 나눌 수 없어서 <pre>로 변경.-->
       <pre class="welcome-header__text">
         If you have a Kokoa Account,
-        log in wuth your email or phone number.
+        log in with your email or phone number.
       </pre>
     </header>
 
