--- a/friends.html
+++ b/friends.html
@@ -74,8 +74,10 @@
           </div>
         </div>
         <div class="user-component__column">
-          <span>2</span>
-          <i class="fas fa-chevron-right"></i>
+          <div>
+            <span>2</span>
+            <i class="fas fa-chevron-right"></i>
+          </div>
         </div>
       </div>
     </main>
@@ -88,16 +90,18 @@
           ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"
-            ><span class="nav__notification">1</span>
+          <a class="nav__link" href="chats.html"
+            ><span class="nav__notification badge">1</span>
             <i class="far fa-comment fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
+          <a class="nav__link" href="find.html"
+            ><i class="fas fa-search fa-2x"></i
+          ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#">
+          <a class="nav__link" href="more.html">
             <!--notification을 응용하여 만든 notification-dot-->
             <span class="nav__notification-dot"></span>
             <i class="fas fa-ellipsis-h fa-2x"></i
