--- a/chats.html
+++ b/chats.html
@@ -51,10 +51,11 @@
           </div>
         </div>
         <div class="user-component__column">
-            <span class="user-component__time">11:11</span>
-            <div class="badge">1</div>
+          <span class="user-component__time">11:11</span>
+          <div class="badge">1</div>
         </div>
       </div>
+    </main>
 
     <nav class="nav">
       <ul class="nav__list">
