--- a/find.html
+++ b/find.html
@@ -31,7 +31,7 @@
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-cog fa-lg"></i></span>
-        <span class="screen-header__cog-dot"></span>
+        <span class="screen-header__cog-dot dot-position"></span>
       </div>
     </header>
 
