--- a/more.html
+++ b/more.html
@@ -31,10 +31,10 @@
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
-        <span>
-          <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
-        </span>
-        <!-- <span class="screen-header__cog-dot"></span>-->
+        <span
+          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
+        ></span>
+        <span class="screen-header__cog-dot dot-position"></span>
       </div>
     </header>
 
